manifests/argocd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server
  namespace: argocd
spec:
  selector:
    app: argocd-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
